# mosaic

./: .dockerignore  .gitignore  .justfile  .trivyignore  Cargo.toml  Mosaic Core Specification 292901ba000f80efb327db55d768abf1.md  README.md
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/setup-foundationdb-client/: action.yml
.github/scripts/: render_trivy_summary.py
.github/workflows/: build.yml  cron-zizmor.yml  docker-publish-ecr.yml  docs.yml  functional.yml  lint.yml  publish-ecr.yml  unit.yml  zizmor.yml
crates/adaptor-sigs/: Cargo.toml
crates/adaptor-sigs/src/: adaptor.rs  error.rs  fixed_base.rs  lib.rs
crates/cac/crypto/: Cargo.toml
crates/cac/crypto/src/: deposit_evaluator.rs  deposit_garbler.rs  lib.rs  setup_evaluator.rs  setup_garbler.rs
crates/cac/proto-types/: Cargo.toml
crates/cac/proto-types/src/: bytes.rs  commit.rs  export.rs  game.rs  id.rs  lib.rs  reveal.rs
crates/cac/protocol/: Cargo.toml  g16.v5c
crates/cac/protocol/src/: common.rs  composite.rs  error.rs  lib.rs  tests.rs
crates/cac/protocol/src/deposit/: evaluator.rs  garbler.rs  mod.rs
crates/cac/protocol/src/evaluator/: action.rs  artifact.rs  deposit.rs  input.rs  mod.rs  root_state.rs  state.rs  stf.rs  tests.rs
crates/cac/protocol/src/garbler/: action.rs  artifact.rs  deposit.rs  error.rs  input.rs  mod.rs  root_state.rs  state.rs  stf.rs  tests.rs
crates/cac/protocol/src/setup/: evaluator.rs  garbler.rs  mod.rs
crates/cac/types/: Cargo.toml
crates/cac/types/benches/: serde.rs
crates/cac/types/examples/: bench_serde.rs  minimal.rs
crates/cac/types/src/: adaptor.rs  keypair.rs  lib.rs  msgs.rs  protocol.rs  seed.rs  serde_tests.rs
crates/cac/types/src/state_machine/: info.rs  input.rs  mod.rs
crates/cac/types/src/state_machine/evaluator/: action.rs  deposit.rs  input.rs  root_state.rs  state.rs
crates/cac/types/src/state_machine/garbler/: action.rs  deposit.rs  input.rs  mod.rs  root_state.rs  state.rs
crates/common/: Cargo.toml
crates/common/src/: boxed_array.rs  codec.rs  constants.rs  lib.rs  primitives.rs  serde_ark.rs
crates/compute-exec/: Cargo.toml
crates/compute-exec/src/: config.rs  executor.rs  lib.rs
crates/compute-fw/: Cargo.toml
crates/db/sqlite/: Cargo.toml
crates/db/sqlite/src/: error.rs  jobs.rs  lib.rs  schema.rs  snapshots.rs  state_machines.rs
crates/db/types/: Cargo.toml
crates/db/types/src/: error.rs  lib.rs  traits.rs  types.rs
crates/heap-array/: Cargo.toml
crates/heap-array/src/: lib.rs  serde_impl.rs
crates/job/api/: Cargo.toml
crates/job/api/src/: handle.rs  lib.rs  submission.rs
crates/job/executors/: Cargo.toml
crates/job/executors/benches/: verify_opened_input_shares.rs
crates/job/executors/src/: circuit_sessions.rs  evaluator.rs  garbler.rs  garbling.rs  lib.rs  polynomial_cache.rs  progress.rs  retry_state.rs
crates/job/manager/: Cargo.toml
crates/job/manager/src/: error.rs  job.rs  lib.rs  manager.rs
crates/job/scheduler/: Cargo.toml
crates/job/scheduler/src/: lib.rs  polynomial_cache.rs  priority.rs  scheduler.rs
crates/job/scheduler/src/garbling/: core.rs  mod.rs  reader.rs  registration.rs
crates/job/scheduler/src/handlers/: evaluator.rs  garbler.rs  mod.rs
crates/job/scheduler/src/pool/: mod.rs  queue.rs  worker.rs
crates/job/scheduler/tests/: integration.rs
crates/job/types/: Cargo.toml
crates/job/types/src/: id.rs  job.rs  lib.rs  result.rs  status.rs  traits.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/net-svc/: Cargo.toml
crates/net-types/: Cargo.toml
crates/net-wire/: Cargo.toml
crates/net/client/: Cargo.toml
crates/net/client/src/: bulk.rs  error.rs  lib.rs  protocol.rs
crates/net/client/tests/: integration.rs
crates/net/svc/: Cargo.toml
crates/net/svc-api/: Cargo.toml
crates/net/svc-api/src/: api.rs  config.rs  handshake.rs  lib.rs  peer_id.rs
crates/net/svc/docs/: connection-soundness-model.md
crates/net/svc/src/: api.rs  close_codes.rs  config.rs  lib.rs  tls.rs
crates/net/svc/src/svc/: conn.rs  handlers.rs  mod.rs  peer_rate_limit.rs  state.rs  stream.rs  tasks.rs  version_handshake.rs
crates/net/svc/tests/: integration.rs  minimal.rs
crates/net/types/: Cargo.toml
crates/net/types/src/: lib.rs
crates/network/api/: Cargo.toml
crates/network/api/src/: lib.rs
crates/phasm-exec/: Cargo.toml
crates/phasm-exec/src/: error.rs  executor.rs  lib.rs  notify.rs  provider.rs  tests.rs  types.rs  worker.rs
crates/phasm-exec/src/phasm/: actions.rs  mod.rs
crates/rpc/api/: Cargo.toml
crates/rpc/api/src/: lib.rs  traits.rs
crates/rpc/server/: Cargo.toml
crates/rpc/server/src/: conversion_proptests.rs  conversions.rs  crypto.rs  crypto_proptests.rs  lib.rs  server.rs
crates/rpc/service/: Cargo.toml
crates/rpc/service/src/: crypto_conversion_proptests.rs  crypto_conversions.rs  default.rs  error.rs  lib.rs  schnorr_signer.rs  tests.rs  traits.rs  types.rs
crates/sm-executor/: Cargo.toml
crates/sm-executor-api/: Cargo.toml
crates/sm-executor-api/src/: command.rs  config.rs  handle.rs  lib.rs
crates/sm-executor/src/: lib.rs
crates/table-types/: Cargo.toml
crates/vs3/: Cargo.toml
crates/vs3/benches/: shares.rs
crates/vs3/src/: constants.rs  error.rs  interpolate.rs  lib.rs  polynomial.rs  psm.rs
docker/: Dockerfile  compose.yml  entrypoint.sh  init-fdb.sh
docs/: architecture.md  jobscheduler.md  network.md  sm-executor.md  sm-scheduler.md  trivy-scanning.md
functional-tests/: .gitignore  README.md  entry.py  env.bash  pyproject.toml  run_tests.sh
functional-tests/common/: base_test.py  logging.py  mosaic_base.py  mosaic_e2e.py  rpc.py  rpc_inject.py  wait.py
functional-tests/envs/: mosaic_env.py
functional-tests/factories/: __init__.py  fdb.py
functional-tests/scripts/: test_concurrent_withdrawal.py
functional-tests/services/: __init__.py
functional-tests/tests/: fn_e2e_eval_fail.py  fn_e2e_eval_win.py  fn_mosaic_setup.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adaptor_signature_from_bytes.rs
(+114 files in other folders)
