[workspace]
members = [
  "crates/adaptor-sigs",
  "crates/cac/crypto",
  "crates/cac/proto-types",
  "crates/cac/protocol",
  "crates/cac/types",
  "crates/common",
  "crates/heap-array",
  "crates/compute-exec",
  "crates/compute-fw",
  # "crates/jobs",
  "crates/job/api",
  "crates/job/scheduler",
  "crates/net/client",
  "crates/net/svc",
  "crates/net/svc-api",
  "crates/net/wire",
  "crates/rpc/api",
  "crates/rpc/provider",
  "crates/rpc/server",
  "crates/rpc/types",
  # "crates/state-machine/executor",
  "crates/storage/api",
  "crates/storage/inmemory",
  "crates/table-types",
  "crates/vs3",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Alpen Labs <contact@alpenlabs.io>"]
description = "Mosasic garbler infrastructure"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alpenlabs/mosaic"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bitcoin"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[workspace.dependencies]
mosaic-adaptor-sigs = { path = "crates/adaptor-sigs" }
mosaic-cac-proto-types = { path = "crates/cac/proto-types" }
mosaic-cac-protocol = { path = "crates/cac/protocol" }
mosaic-cac-types = { path = "crates/cac/types" }
mosaic-common = { path = "crates/common" }
mosaic-compute-fw = { path = "crates/compute-fw" }
mosaic-heap-array = { path = "crates/heap-array" }
mosaic-job-api = { path = "crates/job/api" }
mosaic-job-scheduler = { path = "crates/job/scheduler" }
mosaic-net-client = { path = "crates/net/client" }
mosaic-net-svc = { path = "crates/net/svc" }
mosaic-net-svc-api = { path = "crates/net/svc-api" }
mosaic-net-types = { path = "crates/net/types" }
mosaic-net-wire = { path = "crates/net/wire" }
mosaic-rpc-api = { path = "crates/rpc/api" }
mosaic-rpc-provider = { path = "crates/rpc/provider" }
mosaic-rpc-types = { path = "crates/rpc/types" }
# mosaic-state-machine-executor = { path = "crates/state-machine/executor" }
mosaic-storage-api = { path = "crates/storage/api" }
mosaic-storage-inmemory = { path = "crates/storage/inmemory" }
mosaic-table-types = { path = "crates/table-types" }
mosaic-vs3 = { path = "crates/vs3" }

anyhow = "1.0"
blake3 = "1.6"
ckt-fmtv5-types = { git = "https://github.com/alpenlabs/ckt" }
ckt-gobble = { git = "https://github.com/alpenlabs/ckt" }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1"
bitcoin = { version = "0.32.7", features = ["rand", "rand-std"] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
bytes = "1.10"
criterion = "0.5"
fasm = "0.3.1"
futures = "0.3.31"
jsonrpsee = { version = "0.26.0", features = ["macros"] }
jsonrpsee-types = "*"                                                             # constrained by jsonrpsee dep
k256 = "0.13.4"
once_cell = "1.21.3"
proptest = "1.5"
rand = "0.8"
rand_chacha = "0.3.0"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "0.10.9"
strata-codec = { git = "https://github.com/alpenlabs/strata-common.git" }
thiserror = "2.0"
tokio-util = "0.7"
tracing = "0.1"

[profile.release]
opt-level = 3     # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "unwind"  # Graceful shutdown, even on panic
strip = "symbols" # Strip symbols from binary

[profile.test-fast]
inherits = "release"
lto = false
codegen-units = 16
