[package]
name = "adaptor-sigs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-serialize = "0.5.0"
once_cell = "1.21.3"
rand.workspace = true
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
rand_chacha = "0.3.0"
k256 = "0.13.4"
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
bitcoin = { version = "0.32.7", features = ["rand", "rand-std"] }

[lints]
workspace = true
