[package]
name = "mosaic-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
reduced-circuits = []

[dependencies]
ark-serialize = { workspace = true, features = ["derive"] }
serde.workspace = true

[lints]
workspace = true
