[package]
name = "mosaic-compute-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-compute-fw.workspace = true

anyhow.workspace = true
bytes.workspace = true
strata-codec.workspace = true
tracing.workspace = true

[lints]
workspace = true
