[package]
name = "mosaic-heap-array"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ark-serialize.workspace = true
serde.workspace = true

[dev-dependencies]
postcard.workspace = true

[lints]
workspace = true
