[package]
name = "jobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
kanal = "0.1.1"
monoio = "0.2.4"

# [lints]
# workspace = true
