[package]
name = "mosaic-sm-executor-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
kanal = "0.1.1"
mosaic-cac-types.workspace = true
mosaic-net-svc-api.workspace = true

[lints]
workspace = true
