[package]
name = "mosaic-sm-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-cac-protocol.workspace = true
mosaic-cac-types.workspace = true
mosaic-job-api.workspace = true
mosaic-net-client.workspace = true
mosaic-net-svc-api.workspace = true
mosaic-sm-executor-api.workspace = true
mosaic-storage-api.workspace = true

fasm.workspace = true
futures.workspace = true
kanal = "0.1.1"
monoio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
mosaic-storage-inmemory.workspace = true
ark-serialize.workspace = true
ed25519-dalek = "2.2"

[lints]
workspace = true
