[package]
name = "mosaic-vs3"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
rand_core.workspace = true
thiserror.workspace = true

mosaic-common.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
