[package]
name = "mosaic-vs3"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-common.workspace = true

ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-serialize.workspace = true
blake3.workspace = true
ckt-gobble.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "shares"
harness = false

[lints]
workspace = true
