[package]
name = "mosaic-cac-proto-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
