[package]
name = "mosaic-cac-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-cac-types.workspace = true
mosaic-common.workspace = true
rand.workspace = true
rand_chacha.workspace = true
fasm.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
mosaic-storage-inmemory.workspace = true
mosaic-job-executors.workspace = true
mosaic-storage-api.workspace = true
mosaic-job-api.workspace = true
mosaic-net-svc-api.workspace = true 
mosaic-net-svc.workspace = true
mosaic-net-client.workspace = true 
ed25519-dalek = "2.2"
mosaic-cac-types.workspace = true
ckt-fmtv5-types.workspace = true

[lints]
workspace = true
