[package]
name = "mosaic-cac-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blake3.workspace = true
mosaic-cac-types.workspace = true
mosaic-common.workspace = true
fasm.workspace = true
futures.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
mosaic-storage-inmemory.workspace = true
rand_chacha.workspace = true
rand.workspace = true
mosaic-job-executors.workspace = true
mosaic-storage-api.workspace = true
mosaic-job-api.workspace = true
mosaic-net-svc-api.workspace = true 
mosaic-net-svc.workspace = true
mosaic-net-client.workspace = true 
ed25519-dalek = "2.2"
mosaic-cac-types.workspace = true
ckt-fmtv5-types.workspace = true
mosaic-common = { workspace = true, features = ["reduced-circuits"]}

[lints]
workspace = true
