[package]
name = "mosaic-cac-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-cac-types.workspace = true
mosaic-common.workspace = true

blake3.workspace = true
fasm.workspace = true
futures.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
mosaic-vs3.workspace = true

[dev-dependencies]
mosaic-cac-types = { workspace = true, features = ["test-utils"] }
mosaic-storage-inmemory.workspace = true
mosaic-job-executors.workspace = true
mosaic-storage-api.workspace = true
mosaic-job-api.workspace = true
mosaic-net-svc-api.workspace = true
mosaic-net-svc.workspace = true
mosaic-net-client.workspace = true
mosaic-common = { workspace = true, features = ["reduced-circuits"] }
mosaic-storage-s3.workspace = true
mosaic-storage-kvstore.workspace = true 

tokio = { version = "1", features = ["rt", "macros"] }
ed25519-dalek = "2.2"
ckt-fmtv5-types.workspace = true
object_store = { version = "0.11", features = ["aws"] }

[lints]
workspace = true
