[package]
name = "mosaic-cac-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-common.workspace = true
mosaic-heap-array.workspace = true
mosaic-vs3.workspace = true

ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-serialize.workspace = true
fasm.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true

[lints]
workspace = true
