[package]
name = "mosaic-cac-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-adaptor-sigs.workspace = true
mosaic-common.workspace = true
mosaic-heap-array.workspace = true
mosaic-net-svc-api.workspace = true
mosaic-vs3.workspace = true

ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-serialize.workspace = true
fasm.workspace = true
futures.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "serde"
harness = false

[lints]
workspace = true
