[package]
name = "mosaic-db-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SQLite database implementation for Mosaic"
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-db-types.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
