[package]
name = "mosaic-db-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Database traits and types for Mosaic"
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-job-types.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
