[package]
name = "mosaic-job-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "API types for the Mosaic job scheduler"
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-cac-types.workspace = true
mosaic-common.workspace = true

kanal = "0.1.1"
thiserror.workspace = true

[lints]
workspace = true
