[package]
name = "mosaic-net-svc-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Public API types for the Mosaic network service"
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ed25519-dalek = "2"
hex = "0.4"
kanal = "0.1.1"

# [lints]
# workspace = true
