[package]
name = "mosaic-net-svc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-net-svc-api = { path = "../svc-api" }

hashbrown = "0.16.1"
kanal = "0.1.1"
tokio = { version = "1.49.0", default-features = false, features = [
  "macros",
  "net",
  "parking_lot",
  "rt",
  "time",
  "io-util",
  "sync",
] }
tokio-util = { version = "0.7", features = ["rt"] }

# TLS / QUIC
ed25519-dalek = { version = "2", features = ["pkcs8"] }
quinn = "0.11"
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
x509-parser = "0.17"

# Wire format
mosaic-net-wire = { path = "../wire" }

# Utilities
ahash = "0.8"
blake3 = "1"
hex = "0.4"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# [lints]
# workspace = true
