[package]
name = "mosaic-rpc-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mosaic-common.workspace = true
mosaic-rpc-api.workspace = true
mosaic-rpc-provider.workspace = true
mosaic-rpc-types.workspace = true

jsonrpsee = { workspace = true, features = ["server-core"] }

[lints]
workspace = true
